examples and new buttons

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -42,10 +42,17 @@
 </script>
 </head>
 
-<body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">    
+<body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
+    
   <div role="main">
-     <img src="static/img/logo.png" width="300" height="100" />
+     <img src="static/img/title.png" width="300" height="100" />
+     <br />
+     <img src="static/img/watchbox_btn.png" width="150" height="30"/>
+     <img src="static/img/watchfriends_btn.png"  width="150" height="30"/>
+     <img src="static/img/feeling_btn.png"  width="150" height="30"/>
   </div>
+  
+  <br />
   <script type ='text/javascript' src='static/js/friendtable.js'></script>
   <div id="friendGroup"></div>
   <div id="container"></div>
