--- a/frontend/templates/watchbox.html
+++ b/frontend/templates/watchbox.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %}
   {% block body %}
-  <h2>Browse</h2>
+  <h2>Watchbox</h2>
   <script type ='text/javascript' src='static/js/friendtable.js'></script>
 
 {% endblock %}
