--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -1,40 +1,6 @@
-<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
-</head>
+{% extends "header.html" %}
+{% block body %}
+  <h2>Choose Friends</h2>
+<script type ='text/javascript' src='static/js/chooseFriends.js'></script>
 
-<body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
-  <div role="main">
-     <img src="static/img/logo.png" width="300" height="100" />
-  </div>
-  <script type ='text/javascript' src='static/js/chooseFriends.js'></script>
-</body>
-</html>
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-
-<title>Flaskr</title>
-<link rel=stylesheet type=text/css href="static/css/style.css">
-<div class=page>
-  <h1>Tubely</h1>
-  <img src="static/img/title.png" />
-  <!--<div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}-->
-</div>
-
+{% endblock %}
