--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -1,19 +1,46 @@
 <!doctype html>
-<title>Flaskr</title>
+<title>Tubely</title>
 <link rel=stylesheet type=text/css href="static/css/style.css">
+
+
+<head>
+
+  <!-- JAVASCRIPT INCLUDE STATEMENTS -->
+  <script src="static/js/modernizr-2.5.3.min.js"></script>
+  <script type='text/javascript' src='static/jwplayer/jwplayer.js'></script>
+  <script type="text/javascript" src="static/chromatable/jquery.chromatable.js"></script>
+  <!-- <script type ='text/javascript' src='static/friendtable.js'></script>-->
+ 
+  <script type="text/javascript" src="static/chromatable/jquery-1.3.2.min.js"></script>
+  <script type="text/javascript" src="static/chromatable/jquery-ui-1.7.2.custom.min.js"></script>
+    
+</head>
+
+
+<body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
 <div class=page>
-  <h1>Tubely</h1>
-  <img src="static/img/title.png" />
-  <!--<div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}-->
-  {% block body %}{% endblock %}
+     <img src="static/img/title.png" width="300" height="100" 
+       			onClick="parent.location='/'"/>
+                
+     <br />
+     <img src="static/img/browse_btn.png" width="200" height="50" 
+     			onmouseover="this.src ='static/img/browse_highlighted.png'" 	
+     			onmouseout="this.src='static/img/browse_btn.png'"
+                onClick="parent.location='/browse'" />
+     <img src="static/img/watchbox_btn.png" width="200" height="50" 
+     			onmouseover="this.src ='static/img/watchbox_highlighted.png'" 
+                onmouseout="this.src='static/img/watchbox_btn.png'"
+                onClick="parent.location='/watchbox'" />
+     <img src="static/img/watchfriends_btn.png"  width="200" height="50" 
+     			onmouseover="this.src ='static/img/watchfriends_highlighted.png'" 
+                onmouseout="this.src='static/img/watchfriends_btn.png'"
+                onClick="parent.location='/friends'" />
+     <img src="static/img/feeling_btn.png"  width="200" height="50" 
+     			onmouseover="this.src ='static/img/feeling_highlighted.png'" 
+                onmouseout="this.src='static/img/feeling_btn.png'"
+                onClick="parent.location='/feeling'" />
+
+  {% block body %}
+  {% endblock %}
 </div>
 
