added browse and genre js

--- a/frontend/templates/feeling.html
+++ b/frontend/templates/feeling.html
@@ -1,6 +1,7 @@
 {% extends "header.html" %}
   {% block body %}
   <h2>I'm Feeling</h2>
-  <script type ='text/javascript' src='static/js/friendtable.js'></script>
+  hello world!!!
+  <script type ='text/javascript' src='static/js/genres.js'></script>
 
 {% endblock %}
