--- a/frontend/templates/browse.html
+++ b/frontend/templates/browse.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %}
   {% block body %}
   <h2>Browse</h2>
-  <script type ='text/javascript' src='static/js/friendtable.js'></script>
+  <script type ='text/javascript' src='static/js/browse.js'></script>
 
 {% endblock %}
