--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,7 +3,8 @@
 
 
   <br />
-  <script type ='text/javascript' src='static/js/friendtable.js'></script>
+  <!--<script type ='text/javascript' src='static/js/friendtable.js'></script>-->
+  
   <div id="friendGroup"></div>
   <div id="container"></div>
 
