--- a/frontend/templates/feeling.html
+++ b/frontend/templates/feeling.html
@@ -1,7 +1,18 @@
 {% extends "header.html" %}
-  {% block body %}
-  <h2>I'm Feeling</h2>
-  hello world!!!
-  <script type ='text/javascript' src='static/js/genres.js'></script>
+{% block body %}
+
+  <h2>I'm Feeling... </h2>
+  
+
+  
+<table id="genreTable" border="0" cellspacing="10" cellpadding="10"> <tbody>	<tr>
+{% for genre in genres %}
+	{% if (loop.index-1) % 3 == 0 %}
+    	</tr><tr>
+    {%endif%}
+  <td><button width="200px" height="200px" style="background:#FF9; color:#09F" name="{{genre.genre_name}}" onclick="" > {{genre.genre_name}} </button> </td>
+{% endfor %}
+</tr> </tbody> </table>
+
 
 {% endblock %}
