--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -2,9 +2,13 @@
 {% block body %}
   <h2>Choose Friends</h2>
 
-<table id="friendTable" border="0" cellspacing="10" cellpadding="10"> <tbody>	<tr>
+<table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
 {% for message in messages %}
-  <td><img width="100px" height="100px" src="{{message.friend_pic}}" /></td>
+	{% if (loop.index-1) % 3 == 0 %}
+    	</tr><tr>
+    {%endif%}
+  	<td><img width="100px" height="100px" src="{{message.friend_pic}}" /></td>
+
 {% endfor %}
 </tr> </tbody> </table>
 
