--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %}
 {% block body %}
-  <h2>Choose Friends</h2>
+  <a href="/friends">Watch with Friends</a>  <a href="/joinFriends">Join Friends </a>  
 
 <table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
 {% for message in messages %}
