--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -19,22 +19,25 @@
 
 <body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
 <div class=page>
-     <img src="static/img/title.png" width="300" height="100" 
+     <img src="static/img/title.png" width="250" height="100" 
        			onClick="parent.location='/'"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 
-     <br />
      <img src="static/img/browse_btn.png" width="200" height="50" 
      			onmouseover="this.src ='static/img/browse_highlighted.png'" 	
      			onmouseout="this.src='static/img/browse_btn.png'"
                 onClick="parent.location='/browse'" />
+     &nbsp;
      <img src="static/img/watchbox_btn.png" width="200" height="50" 
      			onmouseover="this.src ='static/img/watchbox_highlighted.png'" 
                 onmouseout="this.src='static/img/watchbox_btn.png'"
                 onClick="parent.location='/watchbox'" />
+     &nbsp;
      <img src="static/img/watchfriends_btn.png"  width="200" height="50" 
      			onmouseover="this.src ='static/img/watchfriends_highlighted.png'" 
                 onmouseout="this.src='static/img/watchfriends_btn.png'"
                 onClick="parent.location='/friends'" />
+     &nbsp;
      <img src="static/img/feeling_btn.png"  width="200" height="50" 
      			onmouseover="this.src ='static/img/feeling_highlighted.png'" 
                 onmouseout="this.src='static/img/feeling_btn.png'"
