--- a/frontend/templates/browse.html
+++ b/frontend/templates/browse.html
@@ -3,12 +3,13 @@
   
   <h2>Browse</h2>
   
-<table id="friendTable" border="0" cellspacing="20" cellpadding="20"> <tbody>	<tr>
+<table id="friendTable" border="0" cellspacing="20" cellpadding="20" class="browseTable"> <tbody>	<tr>
 {% for show in shows %}
 	{% if (loop.index-1) % 3 == 0 %}
     	</tr><tr>
     {%endif%}
   	<td><img width="150px" height="100px" src="{{show.show_pic}}" /></td>
+    <td> <b>{{show.show_name}}</b> <br /> {{show.show_description}} </td>
 {% endfor %}
 </tr> </tbody> </table>
 
