--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,13 +1,10 @@
 {% extends "header.html" %}
 {% block body %}
 
-
   <br />
-  <!--<script type ='text/javascript' src='static/js/friendtable.js'></script>-->
   
-  <div id="friendGroup"></div>
+  <p style="color:#09F"> Streaming from your WatchBox... </p>
   <div id="container"></div>
-
   <script type="text/javascript">
     jwplayer("container").setup({
     'flashplayer': 'static/jwplayer/player.swf',
