watch with friends, genre
added javascript for watching with friends and adding genres that you
want to watch.  also added more genres.  added an 'about page' and
'contact page'.  note, search is non-functional

--- a/frontend/templates/browse.html
+++ b/frontend/templates/browse.html
@@ -8,7 +8,7 @@
 	{% if (loop.index-1) % 3 == 0 %}
     	</tr><tr>
     {%endif%}
-  	<td><img width="150px" height="100px" src="{{show.show_pic}}" /></td>
+  	<td><img width="150px" height="100px" src="{{show.show_pic}}" onclick="addShow()"/></td>
     <td> <b>{{show.show_name}}</b> <br /> {{show.show_description}} </td>
 {% endfor %}
 </tr> </tbody> </table>
