--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -55,12 +55,13 @@
   {% block body %}
   {% endblock %}
   
-  
-  <br /><br />
-  <div style="position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
+  <br />  <br />  <br />
+
+<div style="position:absolute width: 100%; text-align: center;">  
   <a href="/about" class="header"> About </a>  &nbsp; &nbsp; | &nbsp; &nbsp;
   <a href="/contact" class="header"> Contact Us </a>  
-  </div>
+ </div>
+ <br />
 
     
 </div>
