--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -54,6 +54,42 @@ table.browseTable {
 	text-align:left;
 }
 
+button.watch {
+	width:100;height:100; 
+	color:#09F;
+	padding:3px 10px; 
+	background-color:#FF9; 
+    -webkit-border-radius:10px;
+    -moz-border-radius:15px;
+}
+button.watch:hover {
+	background-color:#FF0; 
+}
+
+button.genre {
+	width:200px;
+	height:70px; 
+	color:#000;
+	padding:3px 10px; 
+	background-color:#FF9; 
+    -webkit-border-radius:10px;
+    -moz-border-radius:15px;
+	font-size:24px;
+}
+button.genre:hover {
+	background-color:#FF0; 
+}
+button.addedgenre {
+	width:100px;
+	height:30px; 
+	color:#000;
+	padding:3px 10px; 
+	background-color:#9FF;
+    -webkit-border-radius:10px;
+    -moz-border-radius:15px;
+	font-size:12px;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection declarations have to be separate
