--- a/frontend/templates/feeling.html
+++ b/frontend/templates/feeling.html
@@ -1,16 +1,81 @@
 {% extends "header.html" %}
-{% block body %}
-
-  <h2>I'm Feeling... </h2>
+{% block body %} 
   
+<script type='text/javascript' >
+var genres = [];
 
+function addGenre(genre)
+{
+	var addedAlready = false;
+	for(var i=0; i < genres.length; i++)
+	{
+		if(genres[i] == genre)
+		{
+			addedAlready = true;	
+		}
+	}
+	// if not already added, add friend
+	if(!addedAlready)
+	{
+		genres.push(genre);
+	}
+	// redraw grid
+	drawAddedGenres();
+}
+
+function removeGenre(genre)
+{
+	var spot;
+	for(var i=0; i < genres.length; i++)
+	{
+		if(genres[i] == genre)
+		{
+			spot = i;	
+		}
+	}
+	genres.splice(spot,1);	
+	drawAddedGenres();
+}
+
+function drawAddedGenres()
+{
+	var numRows = 1;
+	if(genres.length > 0)
+	{
+		var genreTable = '<table id="friendTable2" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>';
+		
+		for(var i=0; i < genres.length; i++)
+		{
+			genreTable = genreTable + '<td><button class="addedgenre" name="'+genres[i]+'" onclick="removeGenre(this.name)">'+genres[i]+' </button></td>';
+			if((i+1)%6 == 0)
+			{
+				genreTable += '</tr><tr>';
+				numRows++;	
+			}
+		}
+		genreTable = genreTable + "</tr></tbody></table>";
+		document.getElementById("addedGenresTable").innerHTML= genreTable;
+		document.getElementById("addedGenresTable").style.height=50*numRows+'px';
+	} else {
+		var html = '<div style="width: 100%; text-align: center;  color:#FFF" >'+
+					'<img src="static/img/frown.png" width="100px" height="100px" /> <br/>'+
+					'You have not chosen any friends to watch anything with yet :( </div>';
+		document.getElementById("addedGenresTable").innerHTML= 'I guess you\'re feeling blah since you haven\t yet selected any genres';
+	}
+}
+</script>
+
+<h2> I'm Feeling... </h2>
+<div id="addedGenresTable" style="height:50px">
+You haven't chosen a mood yet.
+</div>
   
 <table id="genreTable" border="0" cellspacing="10" cellpadding="10"> <tbody>	<tr>
 {% for genre in genres %}
-	{% if (loop.index-1) % 3 == 0 %}
+	{% if (loop.index-1) % 4 == 0 %}
     	</tr><tr>
     {%endif%}
-  <td><button width="200px" height="200px" style="background:#FF9; color:#09F" name="{{genre.genre_name}}" onclick="" > {{genre.genre_name}} </button> </td>
+  <td><button class="genre" name="{{genre.genre_name}}" onclick="addGenre(this.name)" > {{genre.genre_name}} </button> </td>
 {% endfor %}
 </tr> </tbody> </table>
 
