--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -1,15 +1,100 @@
 {% extends "header.html" %}
 {% block body %}
-  <a href="/friends">Watch with Friends</a>  <a href="/joinFriends">Join Friends </a>  
+        <a href="/friends" class="header"> Watch with Friends </a>  &nbsp; &nbsp; | &nbsp; &nbsp;
+      <a href="/joinfriends" class="header"> Join Friends </a>  &nbsp; &nbsp; 
+      
+      <br /> <br />
+      
+<script type='text/javascript' >
+var addedFriends = [];
+
+function addFriend(friendPic)
+{
+	var addedAlready = false;
+	for(var i=0; i < addedFriends.length; i++)
+	{
+		if(addedFriends[i] == friendPic)
+		{
+			addedAlready = true;	
+		}
+	}
+	// if not already added, add friend
+	if(!addedAlready)
+	{
+		addedFriends.push(friendPic);
+	}
+	// redraw grid
+	drawAddedFriends();
+}
+
+function removeFriend(friendPic)
+{
+	var spot;
+	for(var i=0; i < addedFriends.length; i++)
+	{
+		if(addedFriends[i] == friendPic)
+		{
+			spot = i;	
+		}
+	}
+	addedFriends.splice(spot,1);	
+	drawAddedFriends();
+}
+
+function drawAddedFriends()
+{
+	if(addedFriends.length > 0)
+	{
+		var friendsTable = '<table id="friendTable2" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>';
+		for(var i=0; i < addedFriends.length; i++)
+		{
+			friendsTable = friendsTable + '<td><img width="100px" height="100px" src="'+addedFriends[i]+'" onclick="removeFriend(this.src)" /></td>';
+		}
+		friendsTable = friendsTable + "</tr></tbody></table>";
+		document.getElementById("selectedFriends").innerHTML= friendsTable;
+	} else {
+		var html = '<div style="width: 100%; text-align: center;  color:#FFF" >'+
+					'<img src="static/img/frown.png" width="100px" height="100px" /> <br/>'+
+					'You have not chosen any friends to watch anything with yet :( </div>';
+		document.getElementById("selectedFriends").innerHTML= html;
+	}
+}
+
+</script>
+
+<!------------------------------- SELECTED FRIENDS --------------------------------->
+<div id="selectedFriends" style="color:#FFF; min-height:120px; text-align:center; color:#FFF">
+<img src="static/img/frown.png" width="100px" height="100px" /> 
+<br /> You have not chosen any friends to watch anything with yet :( 
+</div>
+<br />
+<div style="width: 100%; text-align: center; color:#FFF" >
+<button class="watch" onclick="parent.location='/watch'"> <b>Start watching with friends!</b></button>
+   </div>
+<br /> <br />
+
+<!------------------------------- CHOOSE FRIENDS --------------------------------->
+<div style="width: 100%; text-align: center;" >
+Choose Friends to watch with..   
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+<input type="search" name="googlesearch" style="color:#000; -webkit-border-radius:10px;
+    -moz-border-radius:15px;" value="Search Friends"/>
+<img src="static/img/search.png" width="40px" height="40px" />
+
+<br />
 
 <table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
 {% for message in messages %}
 	{% if (loop.index-1) % 3 == 0 %}
     	</tr><tr>
     {%endif%}
-  	<td><img width="100px" height="100px" src="{{message.friend_pic}}" /></td>
+  	<td><img width="70px" height="70px" src="{{message.friend_pic}}" onclick="addFriend(this.src)" /></td>
 
 {% endfor %}
 </tr> </tbody> </table>
+
+</div>
+
+
 
 {% endblock %}
