--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -52,13 +52,40 @@ table.browseTable {
 	max-width:160px;
 	min-width:160px;
 	text-align:left;
+	-webkit-border-radius:10px;
+    -moz-border-radius:15px;
+}
+
+div.watchbox {
+	border:0px solid;
+	padding:10px;
+	-webkit-border-radius:10px;
+    -moz-border-radius:15px;
+	background-color:#333;
+}
+
+div.chooseFriends {
+	width: 100%; 
+	text-align: center;
+	border:0px solid;
+	padding:0px;
+	-webkit-border-radius:10px;
+    -moz-border-radius:15px;
+	background-color:#333;
+}
+
+table.friendTable {
+	padding:10px;
+	margin-left:50px;
+	margin-bottom:50px;
+	margin-right:50px;
 }
 
 button.watch {
 	width:100;height:100; 
 	color:#09F;
 	padding:3px 10px; 
-	background-color:#FF9; 
+	background-color:#006;
     -webkit-border-radius:10px;
     -moz-border-radius:15px;
 }
@@ -84,10 +111,13 @@ button.addedgenre {
 	height:30px; 
 	color:#000;
 	padding:3px 10px; 
-	background-color:#9FF;
+	background-color:#09F;
     -webkit-border-radius:10px;
     -moz-border-radius:15px;
 	font-size:12px;
+}
+button.addedgenre:hover {
+	background-color:#0FF;	
 }
 
 /*
