--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -7,8 +7,9 @@
       
 <script type='text/javascript' >
 var addedFriends = [];
+var friendsIDs = []
 
-function addFriend(friendPic)
+function addFriend(friendPic, friendID)
 {
 	var addedAlready = false;
 	for(var i=0; i < addedFriends.length; i++)
@@ -22,6 +23,7 @@ function addFriend(friendPic)
 	if(!addedAlready)
 	{
 		addedFriends.push(friendPic);
+		friendsIDs.push(friendID);
 	}
 	// redraw grid
 	drawAddedFriends();
@@ -38,6 +40,7 @@ function removeFriend(friendPic)
 		}
 	}
 	addedFriends.splice(spot,1);	
+	friendsIDs.splice(spot,1);
 	drawAddedFriends();
 }
 
@@ -60,6 +63,22 @@ function drawAddedFriends()
 	}
 }
 
+function watch()
+{
+
+	var friendString = '';
+	for(var i=0; i < friendsIDs.length; i++)
+	{
+		friendString = friendString + friendsIDs[i] + ",";
+	}
+	//var newURL = "{{url_for('watch', friends="+friendString+")}}";
+	var newURL = "/watch/"+friendString;
+	
+	//document.getElementById("debug").innerHTML = newURL;
+	parent.location = newURL; //"{{ url_for('watch', userid=hello)}}";	
+	
+}
+
 </script>
 
 <!------------------------------- SELECTED FRIENDS --------------------------------->
@@ -69,12 +88,15 @@ function drawAddedFriends()
 </div>
 <br />
 <div style="width: 100%; text-align: center; color:#FFF" >
-<button class="watch" onclick="parent.location='/watch'"> <b>Start watching with friends!</b></button>
+<button class="watch" onclick="watch()"> <b>Start watching with friends!</b></button>
    </div>
 <br /> <br />
 
+<div id="debug" > </div>
+
 <!------------------------------- CHOOSE FRIENDS --------------------------------->
-<div style="width: 100%; text-align: center;" >
+<div class="chooseFriends" >
+<br />
 Choose Friends to watch with..   
 &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
 <input type="search" name="googlesearch" style="color:#000; -webkit-border-radius:10px;
@@ -82,17 +104,16 @@ Choose Friends to watch with..
 <img src="static/img/search.png" width="40px" height="40px" />
 
 <br />
-
-<table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
-{% for message in messages %}
+<table id="friendTable" border="0" cellspacing="100" cellpadding="100" class="friendTable"> <tbody>	<tr>
+{% for friend in friends %}
 	{% if (loop.index-1) % 3 == 0 %}
     	</tr><tr>
     {%endif%}
-  	<td><img width="70px" height="70px" src="{{message.friend_pic}}" onclick="addFriend(this.src)" /></td>
+  	<td><img width="70px" height="70px" src="{{friend.friend_pic}}" onclick="addFriend(this.src,this.id)" id="{{friend.user_id}}" /></td>
 
 {% endfor %}
-</tr> </tbody> </table>
-
+<tr/> </tbody> </table>
+<br />
 </div>
 
 
