--- a/frontend/templates/watch.html
+++ b/frontend/templates/watch.html
@@ -1,34 +1,77 @@
 {% extends "header.html" %}
   {% block body %}
 
-  <script type ='text/javascript' src='static/js/friendtable.js'></script>
+<script type='text/javascript' >
+function addVideoToPlaylist(showpic, showvideo, showname)
+{
+	
+	var playlist = jwplayer().getPlaylist();
+	var newItem = {
+            file: "../"+showvideo,
+            image: showpic,
+            title: showname
+    };
+	playlist.push(newItem);
+	jwplayer().load(playlist);
+}
+
+</script>
+
   
-  <div id="container"></div>
+<div id="friendTable"></div>
+  
+  <table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
+{% for friend in friends %}
+  	<td><img width="50px" height="50px" src="{{friend.friend_pic}}" onclick="addFriend(this.src,this.id)" id="{{friend.user_id}}" /></td>
+{% endfor %}
+</tr> </tbody> </table>
+
+
+</div>
+
+  
+<div id="container"></div>
 
   <script type="text/javascript">
     jwplayer("container").setup({
-    'flashplayer': 'static/jwplayer/player.swf',
-		'width': '1000',
+    'flashplayer': "{{ url_for('static', filename='jwplayer/player.swf') }}",
+	'width': '1000',
     'height': '400',
     'playlist.position': 'right',
     'playlist.size': '320',
-		'skin': 'static/jwplayer/glow.zip',
+		'skin': "{{ url_for('static', filename='jwplayer/glow.zip') }}",
     'playlist': [{
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
+            'file': "{{ url_for('static', filename='jwplayer/video.mp4') }}", 
+            'image': "{{ url_for('static', filename='jwplayer/preview.jpg') }}",
             'title': 'The first video'
     },{ 
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
+            'file': "{{ url_for('static', filename='jwplayer/video.mp4') }}", 
+            'image': "{{ url_for('static', filename='jwplayer/preview.jpg') }}",
             'title': 'The second video'
     },{
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
+            'file': "{{ url_for('static', filename='jwplayer/video.mp4') }}", 
+            'image': "{{ url_for('static', filename='jwplayer/preview.jpg') }}",
             'title': 'The first video'
     }],
     repeat: 'list'
     });
 </script>
+</div>
+
+<br />
+<br />
+
+<div class="watchbox"> 
+<b> Your Watchbox </b>
+
+<table id="watchbox" border="0" cellspacing="100" cellpadding="100" class="watchbox"> <tbody>	<tr>
+{% for video in watchbox %}
+	<td><img width="150px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, this.id, this.name)" id="{{video.show_video}}" name="{{video.show_name}}" /></td>
+{% endfor %}
+</tr> </tbody> </table>
+</div>
+
+<br />
 
 
 {% endblock %}
