--- a/frontend/templates/chooseShow.html
+++ b/frontend/templates/chooseShow.html
@@ -1,10 +1,12 @@
 {% extends "header.html" %}
 {% block body %}
-
-      <br /> <br />
       
 <script type='text/javascript' >
 
+function watchRandomShow()
+{
+       watchShow(1);
+}
 
 function watchShow(show_id)
 {
@@ -22,28 +24,32 @@ function watchShow(show_id)
 
 </script>
 
-<h2> Watching with... </h2>
-<div id="friendTable"></div>
-  <table id="friendTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
+<div>
+<h2 style="text-align:center"> Watching with... </h2>
+  <table class="centeredTable" border="0" cellspacing="100" cellpadding="100"> <tbody>	<tr>
 {% for friend in friends %}
-  	<td><img width="50px" height="50px" src="{{friend.friend_pic}}" id="{{friend.user_id}}" /></td>
+  	<td><img width="90px" height="90px" src="{{friend.friend_pic}}" id="{{friend.user_id}}" /></td>
 {% endfor %}
 </tr> </tbody> </table>
 </div>
 
 <div id='debug'></div>
 
-
-<h2> We Recommend ... </h2>
-<table id="friendTable" border="0" cellspacing="100" cellpadding="100" class="friendTable"> <tbody>	<tr>
+<div>
+<h2 style="text-align:center"> We Recommend ... </h2>
+<table id="centeredTable" border="0" cellspacing="100" cellpadding="100" class="centeredTable"> <tbody>	<tr>
 {% for video in videos %}
-<td><img width="250px" height="150px" src="../{{video.show_pic}}" onclick="watchShow(this.id)" id="{{video.show_id}}" /></td>
+<td><img width="250px" height="150px" src="../{{video.show_pic}}" onclick="watchShow(this.id)" id="{{video.show_id}}" class="showToWatch"/></td>
 {% endfor %}
 </tr><tr>
 {% for video in videos %}
 	<td><b>{{video.show_name}}</b> {{video.show_season}} <br/> {{video.show_description}}</td>
 {% endfor %}
 </tr> </tbody> </table>
+</div>
 
+<div style="width: 100%; text-align: center; color:#FFF" >
+<button class="watch" onclick="watchRandomShow()"> <b>Surprise Me!</b></button>
+</div>
 
 {% endblock %}
