--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -8,6 +8,7 @@
   <!-- JAVASCRIPT INCLUDE STATEMENTS -->
   <script type='text/javascript' src="{{ url_for('static', filename='js/modernizr-2.5.3.min.js') }}"></script>
   <script type='text/javascript' src="{{ url_for('static', filename='jwplayer/jwplayer.js') }}"></script>
+  <script type='text/javascript' src="{{ url_for('static', filename='js/util.js') }}"></script>
   
 
     
