fixed up stuff in feelings and watchbox

--- a/frontend/templates/chooseShow.html
+++ b/frontend/templates/chooseShow.html
@@ -18,7 +18,7 @@ function watchShow(show_id)
 	//var newURL = "{{url_for('watch', friends="+friendString+")}}";
 	var newURL = "/watch/"+friendString;
 	
-	document.getElementById("debug").innerHTML = newURL;
+	//document.getElementById("debug").innerHTML = newURL;
 	parent.location = newURL; 
 }
 
