--- a/frontend/templates/watchbox.html
+++ b/frontend/templates/watchbox.html
@@ -31,7 +31,17 @@ function addVideoToPlaylist(showpic, showvideo, showname)
   
   <div id="container"></div>
 
+  <script type='text/javascript' src="{{ url_for('static', filename='jwplayer/jwplayer.js') }}"></script>
   <script type="text/javascript">
+    var Shows = ({{ playlist|safe }});
+    var Playlist = new Array();
+    for (var i = 0; i < Shows.length; i++) {
+     Entry = {};
+     Entry.file = Shows[i].show_video;
+     Entry.image = "../"+ Shows[i].show_pic;
+     Entry.title = Shows[i].show_name;
+     Playlist.push(Entry);
+    }
     jwplayer("container").setup({
     'flashplayer': "{{ url_for('static', filename='jwplayer/player.swf') }}",
 		'width': '1000',
@@ -39,19 +49,7 @@ function addVideoToPlaylist(showpic, showvideo, showname)
     'playlist.position': 'right',
     'playlist.size': '320',
 		'skin': "{{ url_for('static', filename='jwplayer/glow.zip') }}",
-    'playlist': [{
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
-            'title': 'The first video'
-    },{ 
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
-            'title': 'The second video'
-    },{
-            'file': 'static/jwplayer/video.mp4', 
-            'image': 'static/jwplayer/preview.jpg',
-            'title': 'The first video'
-    }],
+    'playlist': Playlist,
     repeat: 'list'
     });
 </script>
