--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -14,6 +14,7 @@
      Entry.file = Shows[i].show_video;
      Entry.image = "../"+ Shows[i].show_pic;
      Entry.title = Shows[i].show_name;
+     Entry.description = Shows[i].show_description;
      Playlist.push(Entry);
     }
     jwplayer("container").setup({
