--- a/frontend/templates/watch.html
+++ b/frontend/templates/watch.html
@@ -27,7 +27,8 @@
     'playlist': [{
             'file': "http://www.youtube.com/watch?v=TV-NhfgoA7A",
             'image': "../"+myShow.show_pic,
-            'title': myShow.show_name
+            'title': myShow.show_name,
+            'description': myShow.show_description,
     }
 ],
     repeat: 'list'
