--- a/frontend/templates/browse.html
+++ b/frontend/templates/browse.html
@@ -3,13 +3,51 @@
   
 
 <script type='text/javascript' >
+var showsSelected = []
 
-function addShow(showID)
+function toggleShow(showID)
 {
-		
+	var showIsSelected = isShowSelected(showID);
+	//document.getElementById("debug").innerHTML = showIsSelected;
+	if(showIsSelected != -1)
+	{
+		showsSelected.splice(showIsSelected,1);	
+		document.getElementById(showID).style.border = "none";	
+	} else {
+		showsSelected.push(showID);
+		document.getElementById(showID).style.border= "3px solid #06F";
+	}
+}
+
+function isShowSelected(showID)
+{
+	for(var i = 0; i < showsSelected.length; i++)
+	{
+		if(showsSelected[i] == showID)
+		{
+			return i;	
+		}
+	}
+	return -1;
+}
+
+function addToWatchbox()
+{
+	var showString = '';
+	for(var i=0; i < showsSelected.length; i++)
+	{
+		showString = showString + showsSelected[i] + "|";
+	}
+	//var newURL = "{{url_for('watch', friends="+friendString+")}}";
+	var newURL = "/addShows/"+showString;
+	
+	//document.getElementById("debug").innerHTML = newURL;
+	parent.location = newURL;	
 }
 
 </script>
+
+<div id="debug"> </div>
   
  <!-- Header with non-functional search box --> 
 <b style="font-size:36px"> Browse </b> 
@@ -17,6 +55,8 @@ function addShow(showID)
 <input type="search" name="googlesearch" style="color:#000; -webkit-border-radius:10px;
     -moz-border-radius:15px;" value="Search Videos"/>
 <img src="static/img/search.png" width="40px" height="40px" />
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+<button class="watch" onclick="addToWatchbox()"> <b>Add to Watchbox!</b></button>
 
 <br />
   
@@ -26,7 +66,7 @@ function addShow(showID)
 	{% if (loop.index-1) % 3 == 0 %}
     	</tr><tr>
     {%endif%}
-  	<td><img width="150px" height="100px" src="{{show.show_pic}}" onclick="addShow(this.name)" name="{{show.show_id}}"/></td>
+  	<td><img width="150px" height="100px" src="{{show.show_pic}}" onclick="toggleShow(this.id)" id="{{show.show_id}}" class="showToWatch"/></td>
     <td> <b>{{show.show_name}}</b> <br /> <b>  {{show.show_season}} </b> <br /> {{show.show_description}} </td>
 {% endfor %}
 </tr> </tbody> </table>
