--- a/frontend/templates/watch.html
+++ b/frontend/templates/watch.html
@@ -12,7 +12,23 @@
 
 </div>
 
-  
+ 
+<script type='text/javascript' >
+function addVideoToPlaylist(showpic, showvideo, showname, showdescription)
+{
+	
+	var playlist = jwplayer().getPlaylist();
+	var newItem = {
+            file: "../"+showvideo,
+            image: showpic,
+            title: showname,
+            description: showdescription
+    };
+	playlist.push(newItem);
+	jwplayer().load(playlist);
+}
+</script>
+
 <div id="container"></div>
 
   <script type="text/javascript">
@@ -39,16 +55,17 @@
 <br />
 <br />
 
-<!--
+
+<!------ YOUR WATCHBOX ------>
 <div class="watchbox"> 
 <b> Your Watchbox </b>
 
 <table id="watchbox" border="0" cellspacing="100" cellpadding="100" class="watchbox"> <tbody>	<tr>
 {% for video in watchbox %}
-	<td><img width="150px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, 'http://www.youtube.com/watch?v=TV-NhfgoA7A', this.name)" id="{{video.show_video}}" name="{{video.show_name}}" /></td>
+	<td><img width="130px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, 'http://www.youtube.com/watch?v=TV-NhfgoA7A', this.name)" id="{{video.show_video}}" name="{{video.show_name}}" description="{{video.show_description}}" /></td>
 {% endfor %}
 </tr> </tbody> </table>
-</div>-->
+</div>
 
 
 
