--- a/frontend/templates/watchbox.html
+++ b/frontend/templates/watchbox.html
@@ -2,7 +2,7 @@
   {% block body %}
   
   <script type='text/javascript' >
-function addVideoToPlaylist(showpic, showvideo, showname, showdescription)
+function addVideoToPlaylist(showid, showpic, showvideo, showname, showdescription)
 {
 	
 	var playlist = jwplayer().getPlaylist();
@@ -14,6 +14,8 @@ function addVideoToPlaylist(showpic, showvideo, showname, showdescription)
     };
 	playlist.push(newItem);
 	jwplayer().load(playlist);
+	var newURL = "/addToPlaylist/"+showid;
+	parent.location = newURL;	
 }
 
 </script>
@@ -63,7 +65,7 @@ function addVideoToPlaylist(showpic, showvideo, showname, showdescription)
 
 <table id="watchbox" border="0" cellspacing="100" cellpadding="100" class="watchbox"> <tbody>	<tr>
 {% for video in watchbox %}
-	<td><img width="130px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, this.id, this.name, this.alt)" id="{{video.show_video}}" name="{{video.show_name}}" alt="{{video.show_description}}"  /></td>
+	<td><img width="130px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.id, this.src, this.name, this.title, this.alt)" name="{{video.show_video}}" title="{{video.show_name}}" alt="{{video.show_description}}" id="{{video.show_id}}"  /></td>
 {% endfor %}
 </tr> </tbody> </table>
 </div>
