added lots of new friends

--- a/frontend/templates/watch.html
+++ b/frontend/templates/watch.html
@@ -58,11 +58,11 @@ function addVideoToPlaylist(showpic, showvideo, showname, showdescription)
 
 <!------ YOUR WATCHBOX ------>
 <div class="watchbox"> 
-<b> Your Watchbox </b>
+<b> Recommended for You and Your Friends </b>
 
 <table id="watchbox" border="0" cellspacing="100" cellpadding="100" class="watchbox"> <tbody>	<tr>
 {% for video in watchbox %}
-	<td><img width="130px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, 'http://www.youtube.com/watch?v=TV-NhfgoA7A', this.name)" id="{{video.show_video}}" name="{{video.show_name}}" description="{{video.show_description}}" /></td>
+	<td><img width="130px" height="80px" src="../{{video.show_pic}}" onclick="addVideoToPlaylist(this.src, 'http://www.youtube.com/watch?v=TV-NhfgoA7A', this.name)" id="{{video.show_video}}" name="{{video.show_name}}" /></td>
 {% endfor %}
 </tr> </tbody> </table>
 </div>
