--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -17,7 +17,11 @@
 
 <body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
 <div class=page>
-  <br />
+<div style="text-align:left; margin-left:850px; font-size:12px">
+ Hello Jenny &nbsp; &nbsp; <img src="{{ url_for('static', filename='img/users/jenny.jpg') }}" width="70" height="70" 
+       			 align="baseline" style="vertical-align:text-bottom"/>
+</div>
+
      <img src="{{ url_for('static', filename='img/title.png') }}" width="350" height="100" 
        			onClick="parent.location='/watchbox/stream'" align="baseline" style="vertical-align:text-bottom"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
